<resources>
    <string name="app_name">Market</string>
    <!-- Strings related to login -->
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录或注册</string>
    <string name="action_sign_up_short">登录</string>
    <string name="action_sign_in_short">注册</string>
    <string name="db_error">数据库连接失败</string>
    <string name="welcome">欢迎回来！</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!--    login-->
    <string name="login_reg">"还没账号? 前往注册"</string>
    <string name="login_input">请输入用户名/密码</string>
    <string name="login_error">用户名/密码错误</string>
    <string name="reg_again_pwd">再次输入密码</string>
    <string name="reg_name">姓名</string>
    <string name="reg_phone">手机号</string>
    <string name="reg_login">已有账号？前往登录</string>
    <string name="reg_reg">注册</string>
    <string name="hint_input_complete">请输入完整</string>
    <string name="hint_input_twice_diff">两次密码输入不一致</string>
    <string name="reg_success">注册成功，请登录</string>
    <string name="reg_username_exist">注册失败，用户名已存在</string>
    <string name="action_menu">主菜单</string>
    <string name="action_title">简易购物系统</string>
    <string name="action_goods_list">商品列表</string>
    <string name="action_order">全部订单</string>
    <string name="action_my_info">个人信息</string>
    <string name="item_goods_add">立即购买</string>
    <string name="goods_shopping_buy">立即结算</string>
    <string name="goods_shopping_add">增加</string>
    <string name="goods_shopping_rdu">减少</string>
    <string name="goods_shopping_buy_success">购买成功</string>
    <string name="goods_shopping_buy_fail">购买失败</string>
    <string name="btn_ok">确定</string>
    <string name="btn_canel">取消</string>
    <string name="info_success">更新成功</string>
    <string name="info_fail">更新失败</string>
</resources>